# PythonSnippets

./: .gitignore  README.md  hello.py  pyproject.toml
files-io/: read-write-text-data.ipynb
python/decocrators/: pytest_test_cases.ipynb
src/08_python_snippets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/decocrators/: performance_timer.ipynb
src/files-io/: working_with_files.ipynb
src/files-io/faker_data/: customers.csv  demo-file.txt  employees.csv  new_file.txt  numeric_data.csv  sales.csv
src/name_standardization/: name_standardization.py
src/oop_exploration/: 01_object_classes_exploration.ipynb
src/third-party-libraries/attrs/: attrs.md
third-party-libraries/attrs/: 00_first_example.ipynb  01_starter_examples_docs.ipynb
